Known Bugs Updates

--- a/server/templates/mainPages/index.html
+++ b/server/templates/mainPages/index.html
@@ -5,7 +5,8 @@
 <div class="container">
   <center>
     <h1>Tiny Feet Climate Action Planning (CAP)</h1>
-    <h2>A Toolkit for Communities</h2>
+    <h2>Toolkit for Communities</h2>
+    <h3 style="color:red;">NOTE: This is a beta testing website.</h3>
   </center>
   <br>
   <h4>Project Description</h4>
@@ -54,7 +55,7 @@
   <h4>About Our Team</h4>
   <p>Our team is a collaboration of students from Western Colorado University and Colorado School of Mines.</p>
   <p>Valeda Scriber</p>
-  <!-- <div id="center"><img src="../static/img/valeda.jpg" alt="Valeda" width="200"></div> -->
+  <!-- <img src="../static/img/valeda.jpg" alt="Valeda" width="400"/> -->
   <p>After 15 years as an aerospace engineer and program manager building, testing, and launching satellites, Valeda
     decided to shift her career focus to contributing to the ever-escalating issue of climate change. To expand her
     knowledge of environmental issues she spent two years travelling and volunteering internationally. Eventually she
@@ -69,12 +70,37 @@
   <p>Eric is a non-traditional student studying Computer Science at Western Colorado University who has a bachelors in
     Media and Communications.</p>
   <br>
+  <p>Caroline Hidalgo</p>
+  <div id="center"><img src="../static/img/caroline.jpg" alt="Caroline" width="200"></div>
+  <p>Content</p>
+  <br>
+  <br>
+  <p>Heather Keniry</p>
+  <div id="center"><img src="../static/img/heather.jpg" alt="Heather" width="200"></div>
+  <p>Heather Keniry is currently a senior at Colorado School of Mines majoring in Mechanical Engineering with a minor in
+    Computer Science.</p>
+  <br>
+  <br>
+  <p>April Lyndon</p>
+  <div id="center"><img src="../static/img/april.jpg" alt="April" width="200"></div>
+  <p>Content</p>
+  <br>
+  <br>
+  <p>Perla Lyon</p>
+  <div id="center"><img src="../static/img/perla.jpg" alt="Perla" width="200"></div>
+  <p>Content</p>
+  <br>
   <p>Gillian Yost</p>
   <!-- <div id="center"><img src="../static/img/gillian.png" alt="Gillian" width="200"></div> -->
   <p>Gillian Yost is currently a senior at Colorado School of Mines where she is majoring in Electrical Engineering with
     double minors in Computer Science and Public Affairs. In the last two years of her degree, Gillian shifted her focus
     to more of the software portion of Electrical Engineering and as a result, next year in Fall 2021, Gillian will be
     pursuing a Master of Science in Software Engineering at University of Texas in Austin. </p>
+  <br>
+  <p>Kathie Zhang</p>
+  <div id="center"><img src="../static/img/kathie.jpg" alt="Kathie" width="200"></div>
+  <p>Content</p>
+  <br>
   <div class="row">
     <div class="column">
       <div id="center">
@@ -90,4 +116,6 @@
     </div>
   </div>
 </div>
+<br>
+<br>
 {% endblock %}
