--- a/server/templates/mainPages/emissions.html
+++ b/server/templates/mainPages/emissions.html
@@ -51,7 +51,7 @@
   </ul>
   <br>
   <h5>A Discussion of GHG Emissions Scope</h5>
-  <center><img src="../static/img/cityGHGemissions.png" alt="GHG Emissions" width="1000"></center>
+  <center><img src="../static/img/cityGHGemissions.png" alt="GHG Emissions" style="width:100%;"></center>
   <p>Original image Source: Global Protocol for Community-Scale Greenhouse Gas Emission Inventories:
     https://ghgprotocol.org/sites/default/files/standards_supporting/GPC_Executive_Summary_1.pdf</p>
   <br>
@@ -68,4 +68,6 @@
   <!-- iframe does not work on host -->
   <!-- <iframe src="http://tinyfeettoolkit.com/map/" style="height:100vh;width:100%;" title=""></iframe> -->
 </div>
+<br>
+<br>
 {% endblock %}
