Last changes from Team Beta Testing

--- a/server/templates/mainPages/index.html
+++ b/server/templates/mainPages/index.html
@@ -22,7 +22,7 @@
   <p>*Disclaimer* The data displayed is an estimation intended to help user in the initiating their CAP process. The
     information provided by the toolkit is NOT a comprehensive emissions inventory for the selected area.</p>
   <br>
-  <p>Why is creating a community Climate Action Plan important in reducing global warming?</p>
+  <h4>Why is creating a community Climate Action Plan important in reducing global warming?</h4>
   <p>The UN Environment Program and the Intergovernmental Panel on Climate Change (IPCC) advise that global greenhouse
     gas (GHG) emissions need to be cut by over half by 2030 in order to keep warming below a 1.5° C threshold, a
     critical tipping point that if exceeded would have catastrophic consequences to all planetary systems. The primary
@@ -52,6 +52,8 @@
     sectors of emissions.</p>
   <p>2. Click on the select all options to look at the full list of recommendations.</p>
   <br>
+  <center><img src="../static/img/User_Flow.jpg" alt="User Flow" style="width:100%;"></center>
+  <br>
   <h4>About Our Team</h4>
   <p>Our team is a collaboration of students from Western Colorado University and Colorado School of Mines.</p>
   <p>Valeda Scriber</p>
@@ -72,7 +74,8 @@
   <br>
   <p>Caroline Hidalgo</p>
   <div id="center"><img src="../static/img/caroline.jpg" alt="Caroline" width="200"></div>
-  <p>Content</p>
+  <p>Caroline Hidalgo is pursuing a degree in Electrical Engineering B.S. at Colorado School of Mines. Her emphasis area 
+    covered Antennas and Wireless Communications, which is where her focus will lie moving forward after graduation.</p>
   <br>
   <br>
   <p>Heather Keniry</p>
@@ -83,23 +86,23 @@
   <br>
   <p>April Lyndon</p>
   <div id="center"><img src="../static/img/april.jpg" alt="April" width="200"></div>
-  <p>Content</p>
+  <p>April Lyndon is pursuing a degree in Mechanical Engineering and a minor in Economics at Colorado School of Mines.</p>
   <br>
   <br>
   <p>Perla Lyon</p>
   <div id="center"><img src="../static/img/perla.jpg" alt="Perla" width="200"></div>
-  <p>Content</p>
+  <p>Perla Lyon is a senior Environmental Engineering student. She has work experience in various areas, including customer 
+    service and business.  In her free time, she enjoys hiking, traveling, and camping. She is passionate about the outdoors, 
+    plants and is always looking for new challenges.</p>
   <br>
   <p>Gillian Yost</p>
   <!-- <div id="center"><img src="../static/img/gillian.png" alt="Gillian" width="200"></div> -->
   <p>Gillian Yost is currently a senior at Colorado School of Mines where she is majoring in Electrical Engineering with
-    double minors in Computer Science and Public Affairs. In the last two years of her degree, Gillian shifted her focus
-    to more of the software portion of Electrical Engineering and as a result, next year in Fall 2021, Gillian will be
-    pursuing a Master of Science in Software Engineering at University of Texas in Austin. </p>
+    double minors in Computer Science and Public Affairs. In </p>
   <br>
   <p>Kathie Zhang</p>
   <div id="center"><img src="../static/img/kathie.jpg" alt="Kathie" width="200"></div>
-  <p>Content</p>
+  <p>Kathie Zhang is pursuing a Mechanical Engineering B.S. at Colorado School of Mines. Outside of school, her favorite pastime is to get some boba (Tapioca Drink) with her friends.</p>
   <br>
   <div class="row">
     <div class="column">
