--- a/server/templates/mainPages/resources.html
+++ b/server/templates/mainPages/resources.html
@@ -66,5 +66,9 @@
   <h4>Waste Management</h4>
   <p>[17] <a href='https://cdphe.colorado.gov/solidwaste'
   >Colorado Department of Public Health and Environment: Solid Waste Management and Recycling</a></p>
+
+  <h4>Aviation</h4>
+  <p>[17] <a href='https://www.eesi.org/papers/view/fact-sheet-the-growth-in-greenhouse-gas-emissions-from-commercial-aviation'
+  >Environmental and Energy Study Institute GHG Emissions from Commercial Aviation</a></p>
 </div>
 {% endblock %}
