HK Push known bug updates 2

--- a/server/templates/mainPages/index.html
+++ b/server/templates/mainPages/index.html
@@ -7,6 +7,9 @@
     <h1>Tiny Feet Climate Action Planning (CAP)</h1>
     <h2>Toolkit for Communities</h2>
     <h3 style="color:red;">NOTE: This is a beta testing website.</h3>
+    <p style="color:red;">Please use the website as you would and make note of what works, doesn't work and what improvements you belive we could make to improve the web app!</p>
+    <p style="color:red;">In the feedback tab there is a link to a feedback survey as well as a list of the bugs we are currently working on fixing.</p>
+    <p style="color:red;">Thank you so much for your help and feedback!</p>
   </center>
   <br>
   <h4>Project Description</h4>
@@ -56,7 +59,7 @@
   <br>
   <h4>About Our Team</h4>
   <p>Our team is a collaboration of students from Western Colorado University and Colorado School of Mines.</p>
-  <p>Valeda Scriber</p>
+  <p><b>Valeda Scriber</b></p>
   <!-- <img src="../static/img/valeda.jpg" alt="Valeda" width="400"/> -->
   <p>After 15 years as an aerospace engineer and program manager building, testing, and launching satellites, Valeda
     decided to shift her career focus to contributing to the ever-escalating issue of climate change. To expand her
@@ -67,51 +70,54 @@
     highlighted the cost, effort duration of a standard GHG emissions inventory and thus the concept of the Tiny Feet
     CAP toolkit emerged.</p>
   <br>
-  <p>Eric Swanson</p>
+  <p><b>Eric Swanson</b></p>
   <!-- <div id="center"><img src="../static/img/eric.jpg" alt="Eric" width="200"></div> -->
   <p>Eric is a non-traditional student studying Computer Science at Western Colorado University who has a bachelors in
     Media and Communications.</p>
   <br>
-  <p>Caroline Hidalgo</p>
-  <div id="center"><img src="../static/img/caroline.jpg" alt="Caroline" width="200"></div>
-  <p>Caroline Hidalgo is pursuing a degree in Electrical Engineering B.S. at Colorado School of Mines. Her emphasis area 
+  <p><b>Caroline Hidalgo</b></p>
+  <!-- <div id="center"><img src="../static/img/caroline.jpg" alt="Caroline" width="200"></div> -->
+  <p>Caroline Hidalgo is pursuing a degree in Electrical Engineering B.S. at Colorado School of Mines. Her emphasis area
     covered Antennas and Wireless Communications, which is where her focus will lie moving forward after graduation.</p>
   <br>
   <br>
-  <p>Heather Keniry</p>
-  <div id="center"><img src="../static/img/heather.jpg" alt="Heather" width="200"></div>
+  <p><b>Heather Keniry</b></p>
+  <!-- <div id="center"><img src="../static/img/heather.jpg" alt="Heather" width="200"></div> -->
   <p>Heather Keniry is currently a senior at Colorado School of Mines majoring in Mechanical Engineering with a minor in
-    Computer Science.</p>
+    Computer Science specializing in Robotics and Artificial Intelligence. Outside of school she enjoys running,
+    backpacking and reading.</p>
   <br>
   <br>
-  <p>April Lyndon</p>
-  <div id="center"><img src="../static/img/april.jpg" alt="April" width="200"></div>
-  <p>April Lyndon is pursuing a degree in Mechanical Engineering and a minor in Economics at Colorado School of Mines.</p>
+  <p><b>April Lyndon</b></p>
+  <!-- <div id="center"><img src="../static/img/april.jpg" alt="April" width="200"></div> -->
+  <p>April Lyndon is pursuing a degree in Mechanical Engineering and a minor in Economics at Colorado School of Mines.
+  </p>
   <br>
   <br>
-  <p>Perla Lyon</p>
-  <div id="center"><img src="../static/img/perla.jpg" alt="Perla" width="200"></div>
-  <p>Perla Lyon is a senior Environmental Engineering student. She has work experience in various areas, including customer 
-    service and business.  In her free time, she enjoys hiking, traveling, and camping. She is passionate about the outdoors, 
-    plants and is always looking for new challenges.</p>
+  <p><b>Perla Lyon</b></p>
+  <!-- <div id="center"><img src="../static/img/perla.jpg" alt="Perla" width="200"></div> -->
+  <p>Perla Lyon is a senior Environmental Engineering student. She has work experience in various areas, including
+    customer service and business. In her free time, she enjoys hiking, traveling, and camping. She is passionate about
+    the outdoors, plants and is always looking for new challenges.</p>
   <br>
-  <p>Gillian Yost</p>
+  <p><b>Gillian Yost</b></p>
   <!-- <div id="center"><img src="../static/img/gillian.png" alt="Gillian" width="200"></div> -->
   <p>Gillian Yost is currently a senior at Colorado School of Mines where she is majoring in Electrical Engineering with
     double minors in Computer Science and Public Affairs. In </p>
   <br>
-  <p>Kathie Zhang</p>
-  <div id="center"><img src="../static/img/kathie.jpg" alt="Kathie" width="200"></div>
-  <p>Kathie Zhang is pursuing a Mechanical Engineering B.S. at Colorado School of Mines. Outside of school, her favorite pastime is to get some boba (Tapioca Drink) with her friends.</p>
+  <p><b>Kathie Zhang</b></p>
+  <!-- <div id="center"><img src="../static/img/kathie.jpg" alt="Kathie" width="200"></div> -->
+  <p>Kathie Zhang is pursuing a Mechanical Engineering B.S. at Colorado School of Mines. Outside of school, her favorite
+    pastime is to get some boba (Tapioca Drink) with her friends.</p>
   <br>
   <div class="row">
-    <div class="column">
+    <div class="col-sm-5">
       <div id="center">
         <p>Valeda and Eric...</p>
       </div>
       <div id="center"><img src="../static/img/madJack.png" alt="Western Logo" width="200"></div>
     </div>
-    <div class="column">
+    <div class="col-sm-5 offset-sm-2">
       <div id="center">
         <p>The 30 Percent Senior Design Team...</p>
       </div>
