--- a/server/templates/mainPages/index.html
+++ b/server/templates/mainPages/index.html
@@ -103,7 +103,7 @@
   <p><b>Gillian Yost</b></p>
   <!-- <div id="center"><img src="../static/img/gillian.png" alt="Gillian" width="200"></div> -->
   <p>Gillian Yost is currently a senior at Colorado School of Mines where she is majoring in Electrical Engineering with
-    double minors in Computer Science and Public Affairs. In </p>
+    double minors in Computer Science and Public Affairs.</p>
   <br>
   <p><b>Kathie Zhang</b></p>
   <!-- <div id="center"><img src="../static/img/kathie.jpg" alt="Kathie" width="200"></div> -->
