--- a/server/templates/mainPages/index.html
+++ b/server/templates/mainPages/index.html
@@ -7,8 +7,10 @@
     <h1>Tiny Feet Climate Action Planning (CAP)</h1>
     <h2>Toolkit for Communities</h2>
     <h3 style="color:red;">NOTE: This is a beta testing website.</h3>
-    <p style="color:red;">Please use the website as you would and make note of what works, doesn't work and what improvements you belive we could make to improve the web app!</p>
-    <p style="color:red;">In the feedback tab there is a link to a feedback survey as well as a list of the bugs we are currently working on fixing.</p>
+    <p style="color:red;">Please use the website as you would and make note of what works, doesn't work and what
+      improvements you believe we could make to improve the web app!</p>
+    <p style="color:red;">In the feedback tab there is a link to a feedback survey as well as a list of the bugs we are
+      currently working on fixing.</p>
     <p style="color:red;">Thank you so much for your help and feedback!</p>
   </center>
   <br>
@@ -50,25 +52,23 @@
   <p>*Disclaimer* The data displayed is an estimation intended to help user in the initiating their CAP process. The
     information provided by the toolkit is NOT a comprehensive emissions inventory for the selected area.</p>
   <br>
-  <h6>Instruction: Recommendation's Page</h6>
+  <!-- <h6>Instruction: Recommendation's Page</h6>
   <p>1. Click on the check boxes to decide what types of data you would like to see. Select from the metrics and/or
     sectors of emissions.</p>
   <p>2. Click on the select all options to look at the full list of recommendations.</p>
-  <br>
+  <br> -->
   <center><img src="../static/img/User_Flow.jpg" alt="User Flow" style="width:100%;"></center>
   <br>
   <h4>About Our Team</h4>
   <p>Our team is a collaboration of students from Western Colorado University and Colorado School of Mines.</p>
-  <p><b>Valeda Scriber</b></p>
+  <p><b>Valeda Scribner</b></p>
   <!-- <img src="../static/img/valeda.jpg" alt="Valeda" width="400"/> -->
   <p>After 15 years as an aerospace engineer and program manager building, testing, and launching satellites, Valeda
-    decided to shift her career focus to contributing to the ever-escalating issue of climate change. To expand her
-    knowledge of environmental issues she spent two years travelling and volunteering internationally. Eventually she
-    enrolled at Western Colorado University to join their Master of Environmental Management program with a focus in
-    Sustainable and Resilient Communities. She assisted Eagle County with emissions forecasting of climate actions and
-    updated Park City’s emissions inventory as a part of the Mountain Town 2030 (MT2030) cohort. These efforts
-    highlighted the cost, effort duration of a standard GHG emissions inventory and thus the concept of the Tiny Feet
-    CAP toolkit emerged.</p>
+    shifted her career focus to contribute to the pressing issue of climate change. She enrolled at Western Colorado
+    University to join their Master of Environmental Management program with a focus in Sustainable and Resilient
+    Communities. She assisted Eagle County with emissions forecasting of climate actions and updated Park City’s
+    emissions inventory. These efforts highlighted the cost, effort duration of a standard GHG emissions inventory and
+    thus the concept of the Tiny Feet CAP toolkit emerged.</p>
   <br>
   <p><b>Eric Swanson</b></p>
   <!-- <div id="center"><img src="../static/img/eric.jpg" alt="Eric" width="200"></div> -->
