--- a/server/templates/mainPages/resources.html
+++ b/server/templates/mainPages/resources.html
@@ -70,5 +70,40 @@
   <h4>Aviation</h4>
   <p>[18] <a href='https://www.eesi.org/papers/view/fact-sheet-the-growth-in-greenhouse-gas-emissions-from-commercial-aviation'
   >Environmental and Energy Study Institute GHG Emissions from Commercial Aviation</a></p>
+
+  <h3>Acronym List</h3>
+  <p>Below are definitions of acronyms commonly used in this site.</p>
+  <h4>C&D</h4>
+  <p>Construction and Demolition</p>
+  <h4>CO2e</h4>
+  <p>Carbon Dioxide Equivalent, the standard unit for measurement of greenhouse gasses</p>
+  <h4>EPA</h4>
+  <p>Environmental Protection Agency</p>
+  <h4>EV</h4>
+  <p>Elecric Vehicle</p>
+  <h4>GHG</h4>
+  <p>Greenhouse Gas(es)</p>
+  <h4>IPCC</h4>
+  <p>Intergovernmental Panel on Climate Change</p>
+  <h4>LEED</h4>
+  <p>Leadership in Energy and Environmental Design</p>
+  <h4>mT</h4>
+  <p>Metric Tons</p>
+  <h4>MySQL</h4>
+  <p>The database management system we are utilizing to store 
+    our GHG emissions data and climate action recommendation list within</p>
+  <h4>NZEB</h4>
+  <p>Nearly Zero Energy Buildings</p>
+  <h4>PPA</h4>
+  <p>Power Purchase Agreement – a contract between the buyer 
+    and the seller of electricity. An alternative to self-supplying renewable energy</p>
+  <h4>PV</h4>
+  <p>Photovoltaic or Solar Power</p>
+  <h4>SQL</h4>
+  <p>Structured Query Language. This is the coding language used to access data in our database</p>
+  <h4>UN</h4>
+  <p>United Nations</p>
+  <h4>VMT</h4>
+  <p>Vehicle miles travelled, the measurement of surface transportation volume within the boundaries of a municipality</p>
 </div>
 {% endblock %}
